# rush

./: .dockerignore  .env.example  .gitattributes  .gitignore  404.html  Dockerfile  README.md  config.py  config.yaml  deploy_flows.sh  docker-compose.yaml  index.html  install.sh  mkdocs.yml  pyproject.toml  run_dbt.sh  setup.sh  sitemap.xml  teardown.sh
.devcontainer/: devcontainer.json
.github/workflows/: docs.yml
dags/: rush_cloud_pipeline.py  rush_data_preview.py  rush_pipeline.py
docs/: index.md  ingestion.md  orchestration.md  repository.md  storage-docker.md  transformation.md  use-case.md
docs/stylesheets/: extra.css
flows/: main_pipeline.yml  transport_ingestion.yml  weather_ingestion.yml
ingestion/: index.html  transport.py
notebooks/: README.md
orchestration/: README.md  index.html
pipelines/ingestion/: __init__.py  cloud_load_bq.py  cloud_upload.py  transport.py  weather.py
pipelines/transformation/: __init__.py
pipelines/transformation/dbt/: .user.yml  dbt_project.yml  profiles.yml  profiles.yml.example
pipelines/transformation/dbt/macros/: delay_minutes.sql
pipelines/transformation/dbt/models/marts/: mart_departure_recommendations.sql
pipelines/transformation/dbt/models/staging/: sources.yml  stg_transport__departures.sql  stg_weather__forecast.sql
repository/: index.html
scripts/: setup-gcp.sh
search/: search_index.json
storage-docker/: index.html
terraform/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  variables.tf
transformation/: index.html  transform.py
use-case/: index.html
