[project]
name = "rush"
version = "0.1.0"
description = "Swiss public transport and weather analytics pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dlt[duckdb]>=1.0",
    "pandas>=2.2",
    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2",
    "jupyter>=1.1",
    "pgcli>=4.4",
]
